refactor: migrate ViewModel tests from repository to use case architecture with turbine
  - Add turbine dependency for Flow testing across presentation modules
  - Replace FakeCurrencyListRepository with FakeLoadCurrencyRatesUseCase
  - Update CurrencyListViewModel to use LoadCurrencyRatesUseCase instead of repository
  - Migrate all test cases to use turbine for proper Flow testing
  - Ensure test isolation and maintain existing test coverage

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -42,6 +42,7 @@ koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
 kotest-assertions = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
+turbine = { module = "app.cash.turbine:turbine", version = "1.2.0" }
 
 
 [plugins]
